@@ -14,9 +14,11 @@ CDVDDemux* CDVDFactoryDemuxer::CreateDemuxer(CDVDInputStream* pInputStream)
   if (pInputStream->IsStreamType(DVDSTREAM_TYPE_HTTP))
   {
     CDVDInputStreamHttp* pHttpStream = (CDVDInputStreamHttp*)pInputStream;
-    // we can always check header info in (pHttpStream->GetHttpHeader())
-    // for now assume it is always shoutcast
-    return new CDVDDemuxShoutcast();
+    CHttpHeader *header = pHttpStream->GetHttpHeader();
+
+    /* check so we got the meta information as requested in our http header */
+    if( header->GetValue("icy-metaint").length() > 0 )
+      return new CDVDDemuxShoutcast();
   }
   
   return new CDVDDemuxFFmpeg();
