@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 23-03-2006 fixed: dvdplayer would allways assume an http stream was shoutcast.
+ - 23-03-2006 fixed: dvdplayer would not end playback on read error when playing from file.
  - 23-03-2006 fixed: display of temparature texts in system info for non latin charsets
  - 23-03-2006 fixed: Trainer settings dialog couldn't take more than 8 buttons.
  - 23-03-2006 fixed: Skin reload would crash after trainer settings dialog was on screen.
